clipping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,9 @@
-/* === Background Texture Overlay === */
-body::before {
-  content: "";
-  position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background-image: url('../images/paper-fiber-manila.png');
-  background-repeat: repeat;
-  opacity: 0.2;
-  pointer-events: none;
-  z-index: 0;
-}
-
+/* === Page Background === */
 body {
   background-color: #f8f5d7;
+  background-image: url('../images/paper-fiber-manila.png');
+  background-repeat: repeat;
+  background-blend-mode: multiply;
   position: relative;
   z-index: 1;
 }
@@ -108,14 +100,17 @@ body {
   overflow: visible;
 }
 
-/* === Highlight Box (Jittered Blue) === */
+/* === Highlight Box (with matching background) === */
 .highlight-box {
   position: absolute;
   bottom: var(--jitter-bottom, 0%);
   left: var(--jitter-left, 0%);
   width: var(--jitter-width, 100%);
   height: 50%;
-  background-color: #7DC8F2;
+  background-color: #f8f5d7;
+  background-image: url('../images/paper-fiber-manila.png');
+  background-repeat: repeat;
+  background-blend-mode: multiply;
   transform: scaleX(0) rotate(var(--jitter-rotate, 0deg));
   transform-origin: left;
   backface-visibility: hidden;
@@ -126,7 +121,7 @@ body {
   animation: none;
 }
 
-/* === Eraser Box === */
+/* === Eraser Box (with matching background) === */
 .eraser-box {
   position: absolute;
   top: -25%;
@@ -134,21 +129,13 @@ body {
   width: 100%;
   height: 200%;
   background-color: #f8f5d7;
+  background-image: url('../images/paper-fiber-manila.png');
+  background-repeat: repeat;
+  background-blend-mode: multiply;
   pointer-events: none;
   opacity: 1;
   transform: translateX(-100%);
   z-index: 2;
-}
-
-.eraser-box::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-image: url('../images/paper-fiber-manila.png');
-  background-repeat: repeat;
-  opacity: 0.2;
-  pointer-events: none;
-  z-index: 1;
 }
 
 /* === Eraser Animations === */
@@ -252,4 +239,3 @@ body {
   font-weight: 700;
   font-style: normal;
 }
-
